--- a/style.css
+++ b/style.css
@@ -7,25 +7,39 @@ back-ground
     background-color: rgb(219, 54, 51);
     padding: 0%;
     margin: 0%;
-
+    position:sticky;
+    top:0;
+    
 }
-
+.ImageBorder
+{
+    border-width: 1px;
+    border-color: Black;
+}
 .navbar a{
     color: #000;
     text-decoration: none;
     padding: 15px;
     display: block;
-    text-align: center;
+    text-align: left;
 
 }
 
 .navbar a:hover{
     background-color: rgb(219, 54, 51);
-    border: #089352;
+    border: #301d02;
     border-style: solid;
-
+border-radius: 10px;
 }
 p {
-    font-family: cursive;
-    font-size: 20px;
+    font-family: sans-serif
+  }
+  .Detail {
+    border: 5px outset red;
+    background-color: burlywood;    
+    text-align: right;
+  }
+  .navbar {
+    position: sticky;
+    top: 0;
   }
